# new_bot

./: .gitignore  Dockerfile  README.rst  create_docker.text  how to push it on server.txt  pyproject.toml  requirements.txt  settings.json  setup.cfg  state.json  state_test_old.json  storage_example.json  storage_simple.json  theory.txt
files/: my_simple.db
new_bot/: bot.py  local_schema.py  simple_bot.py  test2.py
new_bot/connection/: __init__.py  binance_connect.py
new_bot/db/: __init__.py  db.py  old_db.py
new_bot/db/tables_model/: __init__.py  balance.py  coin.py  history.py  logs.py  stoploss_history.py
new_bot/logic/: __init__.py  actions.py  buy.py  buy2.py  calculate.py  not_used_buy.py  not_used_sell.py  old_calculate.py  sell.py  sell2.py
new_bot/schemas/: __init__.py  api_schemas.py  my_classes.py  not_used_portfolio.py
new_bot/settings/: __init__.py  const.py  main_settings.py  settings.py
tests/: test_new_bot.py
