[tool.poetry]
name = "new_bot"
version = "0.4.2"
description = ""
authors = ["Anton Zimin <zimkaa87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
binance-connector = "^1.11.0"
loguru = "^0.6.0"
python-telegram-bot = "^13.11"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.36"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13.4"
flake8-bugbear = "^22.3.23"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.12.1"
flake8-commas = "^2.1.0"
flake8-variables-names = "^0.0.5"
flake8-import-order = "^0.18.1"
black = {version = "^22.3.0", allow-prereleases = true}
ipython = "^8.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
